--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,15 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <!-- Dependencies -->
+    <dependencies>
+        <!-- You do not need to explicitly add dependencies for java.util.Random or java.lang.String -->
+        <!-- Maven manages core Java dependencies automatically -->
+    </dependencies>
 
 </project>
